docs/api/qiskit/0.29/qiskit.circuit.library.CUGate.md
---
title: CUGate
description: API reference for qiskit.circuit.library.CUGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.CUGate
---

# CUGate

<span id="qiskit.circuit.library.CUGate" />

`CUGate(theta, phi, lam, gamma, label=None, ctrl_state=None)`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/u.py "view source code")

Bases: `qiskit.circuit.controlledgate.ControlledGate`

Controlled-U gate (4-parameter two-qubit gate).

This is a controlled version of the U gate (generic single qubit rotation), including a possible global phase $e^{i\gamma}$ of the U gate.

**Circuit symbol:**

```python
q_0: ──────■──────
     ┌─────┴──────┐
q_1: ┤ U(ϴ,φ,λ,γ) ├
     └────────────┘
```

**Matrix representation:**

$$
 \begin{align}\begin{aligned}\newcommand{\th}{\frac{\theta}{2}}\\\begin{split}CU(\theta, \phi, \lambda, \gamma)\ q_0, q_1 =
    I \otimes |0\rangle\langle 0| +
    e^{i\gamma} U(\theta,\phi,\lambda) \otimes |1\rangle\langle 1| =
    \begin{pmatrix}
        1 & 0                           & 0 & 0 \\
        0 & e^{i\gamma}\cos(\th)        & 0 & -e^{i(\gamma + \lambda)}\sin(\th) \\
        0 & 0                           & 1 & 0 \\
        0 & e^{i(\gamma+\phi)}\sin(\th) & 0 & e^{i(\gamma+\phi+\lambda)}\cos(\th)
    \end{pmatrix}\end{split}\end{aligned}\end{align} 
$$

<Admonition title="Note" type="note">
  In Qiskit’s convention, higher qubit indices are more significant (little endian convention). In many textbooks, controlled gates are presented with the assumption of more significant qubits as control, which in our case would be q\_1. Thus a textbook matrix for this gate will be:

  ```python
       ┌────────────┐
  q_0: ┤ U(ϴ,φ,λ,γ) ├
       └─────┬──────┘
  q_1: ──────■───────
  ```

  $$
  \begin{split}CU(\theta, \phi, \lambda, \gamma)\ q_1, q_0 =
      |0\rangle\langle 0| \otimes I +
      e^{i\gamma}|1\rangle\langle 1| \otimes U(\theta,\phi,\lambda) =
      \begin{pmatrix}
          1 & 0 & 0                             & 0 \\
          0 & 1 & 0                             & 0 \\
          0 & 0 & e^{i\gamma} \cos(\th)         & -e^{i(\gamma + \lambda)}\sin(\th) \\
          0 & 0 & e^{i(\gamma + \phi)}\sin(\th) & e^{i(\gamma + \phi+\lambda)}\cos(\th)
      \end{pmatrix}\end{split}
  $$
</Admonition>

Create new CU gate.

## Methods Defined Here

### inverse

<span id="qiskit.circuit.library.CUGate.inverse" />

`CUGate.inverse()`[GitHub](https://github.com/qiskit/qiskit/tree/stable/0.18/qiskit/circuit/library/standard_gates/u.py "view source code")

Return inverted CU gate.

$CU(\theta,\phi,\lambda,\gamma)^{\dagger} = CU(-\theta,-\phi,-\lambda,-\gamma)$)

## Attributes

<span id="qiskit.circuit.library.CUGate.ctrl_state" />

### ctrl\_state

Return the control state of the gate as a decimal integer.

**Return type**

`int`

<span id="qiskit.circuit.library.CUGate.decompositions" />

### decompositions

Get the decompositions of the instruction from the SessionEquivalenceLibrary.

<span id="qiskit.circuit.library.CUGate.definition" />

### definition

Return definition in terms of other basic gates. If the gate has open controls, as determined from self.ctrl\_state, the returned definition is conjugated with X without changing the internal \_definition.

**Return type**

`List`

<span id="qiskit.circuit.library.CUGate.duration" />

### duration

Get the duration.

<span id="qiskit.circuit.library.CUGate.label" />

### label

Return instruction label

**Return type**

`str`

<span id="qiskit.circuit.library.CUGate.name" />

### name

Get name of gate. If the gate has open controls the gate name will become:

> \<original\_name\_o\<ctrl\_state>

where \<original\_name> is the gate name for the default case of closed control qubits and \<ctrl\_state> is the integer value of the control state for the gate.

**Return type**

`str`

<span id="qiskit.circuit.library.CUGate.num_ctrl_qubits" />

### num\_ctrl\_qubits

Get number of control qubits.

**Returns**

The number of control qubits for the gate.

**Return type**

int

<span id="qiskit.circuit.library.CUGate.params" />

### params

Get parameters from base\_gate.

**Returns**

List of gate parameters.

**Return type**

list

**Raises**

**CircuitError** – Controlled gate does not define a base gate

<span id="qiskit.circuit.library.CUGate.unit" />

### unit

Get the time unit of duration.

